fix(common): repositioning btns <BLANK LINE> shifting btns to right side

--- a/src/styles/wallet/wallet.scss
+++ b/src/styles/wallet/wallet.scss
@@ -20,7 +20,7 @@
 
         &  .option {
             margin: 4rem 0;
-            border: 1px solid $gray;
+            border: 1px solid $borderColor;
             background-color: #fcfcfc;
             border-radius: 1rem;
             padding: 2rem;
@@ -33,7 +33,8 @@
             }
 
             &  .cta {
-                text-align: right;
+                display: flex;
+                justify-content: flex-end;
             }
         }
 
